Refactor and add support for changing the cilium namespace

--- a/src/roles/talos/templates/cilium.yaml.j2
+++ b/src/roles/talos/templates/cilium.yaml.j2
@@ -4,10 +4,12 @@ cluster:
       name: none
   proxy:
     disabled: true
+{% if cilium.namespace | default('kube-system') != 'kube-system' %}
   apiServer:
     admissionControl:
       - name: PodSecurity
         configuration:
           exemptions:
             namespaces:
-              - cilium
+              - {{ cilium.namespace }}
+{% endif %}
